--- a/welcome.html
+++ b/welcome.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
-    <link rel="stylesheet" href="assets/welcome.css">
-</head>
-<body>
-    <h1>Welcome user</h1>
-</body>
+<html>
+  <head>
+    <title>Welcome!</title>
+    <link rel="stylesheet" type="text/css" href="assets/welcome.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Welcome!</h1>
+      <p>Thank you for visiting our website.</p>
+      <div class="animated-text">
+        <span class="letter">C</span>
+        <span class="letter">O</span>
+        <span class="letter">O</span>
+        <span class="letter">L</span>
+      </div>
+    </div>
+  </body>
 </html>
