--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Welcome!</title>
-    <link rel="stylesheet" type="text/css" href="assets/welcome.css">
+    <link rel="stylesheet" type="text/css" href="cadastro_files/welcome.css">
   </head>
   <body>
     <div class="container">
