--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 <form class="input_forms" action="/login" method="POST">
                     <input class="input" id="email" type="email" name="email" placeholder="E-mail" required="">
 
-                    <input class="input" id="telefone" type="password" name="telefone" placeholder="Senha" required="">
+                    <input class="input" id="telefone" type="password" name="password" placeholder="Senha" required="">
 
                     <div class="botao">
                         <button type="submit">Entrar</button>
