Register, login and reset password working great

--- a/welcome.html
+++ b/welcome.html
@@ -6,13 +6,15 @@
   </head>
   <body>
     <div class="container">
-      <h1>Welcome!</h1>
-      <p>Thank you for visiting our website.</p>
+      <h1>Bem - vindo !</h1>
       <div class="animated-text">
+        <span class="letter">B</span>
+        <span class="letter">I</span>
+        <span class="letter">O</span>
+        <span class="letter">T</span>
+        <span class="letter">E</span>
         <span class="letter">C</span>
-        <span class="letter">O</span>
-        <span class="letter">O</span>
-        <span class="letter">L</span>
+        <span class="letter">H</span>
       </div>
     </div>
   </body>
